# Council-of-Elrond

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: config.py  council.py  jobs.py  main.py  openrouter.py  search.py  storage.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.jsx  api.js  index.css
frontend/src/components/: AdminPanel.css  AdminPanel.jsx  ChatInput.jsx  ChatInterface.css  ChatInterface.jsx  Icons.jsx  Markdown.jsx  MessageBubble.jsx  Sidebar.css  Sidebar.jsx  Stage1.css  Stage1.jsx  Stage2.css  Stage2.jsx  Stage3.css  Stage3.jsx
